api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "10"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"api","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"api"}},"template":{"metadata":{"labels":{"app":"api"}},"spec":{"containers":[{"args":["set -e\n\npip install --no-cache-dir fastapi uvicorn pyyaml\n\necho \"=== DEBUG ===\"\nls -R /workspace/app_platform\n\necho \"PYTHONPATH=$PYTHONPATH\"\n\ncd /workspace\n\npython -m uvicorn app_platform.api.main:app --host 0.0.0.0 --port 8000\ [...]
  creationTimestamp: "2026-06-02T13:50:51Z"
  generation: 10
  name: api
  namespace: default
  resourceVersion: "40112"
  uid: 1b8c07a1-eb68-4581-8ee4-e8c786a62cd1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-06-03T22:36:39+06:00"
      creationTimestamp: null
      labels:
        app: api
    spec:
      containers:
      - args:
        - |
          set -e

          pip install --no-cache-dir fastapi uvicorn pyyaml

          echo "=== DEBUG ==="
          ls -R /workspace/app_platform

          echo "PYTHONPATH=$PYTHONPATH"

          cd /workspace

          python -m uvicorn app_platform.api.main:app --host 0.0.0.0 --port 8000
        command:
        - bash
        - -c
        image: python:3.11
        imagePullPolicy: IfNotPresent
        name: api
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /workspace
          name: app
        workingDir: /workspace
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /home/shopno/k8s-platform
          type: Directory
        name: app
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-06-03T09:31:22Z"
    lastUpdateTime: "2026-06-03T09:31:22Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-06-02T13:50:52Z"
    lastUpdateTime: "2026-06-03T16:36:41Z"
    message: ReplicaSet "api-5f6fd4d676" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 10
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
