kobocat-clean.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kobocat
  namespace: kobo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kobocat
  template:
    metadata:
      labels:
        app: kobocat
    spec:
      containers:
        - name: kobocat
          image: kobotoolbox/kobocat:2.024.19e
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
