kobocat-working-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"kobocat","namespace":"kobo"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"kobocat"}},"template":{"metadata":{"labels":{"app":"kobocat"}},"spec":{"containers":[{"env":[{"name":"DJANGO_SETTINGS_MODULE","value":"onadata.settings.prod"}],"envFrom":[{"secretRef":{"name":"kobo-secrets"}},{"configMapRef":{"name":"kobo-env"}}],"image":"kobotoolbox/kobocat:2.024.19e","imagePullPolicy":"IfNotPresent","liveness [...]
  creationTimestamp: "2026-05-26T09:39:27Z"
  generation: 3
  name: kobocat
  namespace: kobo
  resourceVersion: "543433"
  uid: 3c4874c6-0d3e-4860-9af3-542a9ca9c21d
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kobocat
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kobocat
    spec:
      containers:
      - args:
        - "3600"
        command:
        - sleep
        image: kobotoolbox/kobocat:2.024.19e
        imagePullPolicy: IfNotPresent
        name: kobocat
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-05-26T09:39:28Z"
    lastUpdateTime: "2026-05-26T09:39:28Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-05-26T10:10:41Z"
    lastUpdateTime: "2026-05-26T10:10:41Z"
    message: ReplicaSet "kobocat-756c65f597" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
